--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
   
   mongo:
     image: mongo
+    container_name: mongo
     restart: always
     ports:
       - ${MONGODB_PORT}:${MONGODB_PORT}
